--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
           <p class="tagline">Logística Frigorificada • Carregamento & Descarregamento</p>
         </div>
       </div>
-      <nav>
-        <button id="tab-novo" class="active">Novo</button>
-        <button id="tab-editar">Editar</button>
-        <button id="tab-pesquisar">Pesquisar</button>
-      </nav>
+     <nav>
+  <button id="tab-novo" class="active">Novo</button>
+  <button id="tab-editar">Editar</button>
+  <button id="tab-pesquisar">Pesquisar</button>
+  <button id="tab-dash">Dashboard</button>
+</nav>
+
     </div>
   </div>
 
@@ -512,4 +514,5 @@
 </script>
 </body>
 </html>
+
 
