--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     window.supa = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
   </script>
 
-  <!-- Chart.js para o Dashboard -->
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
 
   <meta charset="utf-8"/>
@@ -19,6 +19,10 @@
     :root{
       --bg:#f3f7fb;--card:#ffffff;--text:#0f172a;--muted:#64748b;--border:#e2e8f0;
       --primary:#148CD6;--primary-dark:#0A6FB9;--danger:#dc2626;--ring: rgba(20,140,214,.35);
+      --ok:#16a34a;--ok-100:#dcfce7;--ok-300:#86efac;
+      --info:#0ea5e9;--info-100:#e0f2fe;--info-300:#7dd3fc;
+      --warn:#f97316;--warn-100:#ffedd5;--warn-300:#fdba74;
+      --err:#ef4444;--err-100:#fee2e2;--err-300:#fca5a5;
     }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Arial,sans-serif}
@@ -50,7 +54,18 @@
     .muted{color:var(--muted);font-size:12px}
     .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .hide{display:none !important}
-    @media (max-width:860px){.g3{grid-template-columns:1fr}.g2{grid-template-columns:1fr}}
+
+    /* KPI CARDS */
+    .kpis{display:grid;gap:12px;grid-template-columns:repeat(3,1fr)}
+    .kpi{border-radius:12px;padding:16px;border:1px solid var(--border);background:#fff}
+    .kpi--blue{background:linear-gradient(180deg,var(--info-100),#fff);border-color:var(--info-300)}
+    .kpi--green{background:linear-gradient(180deg,var(--ok-100),#fff);border-color:var(--ok-300)}
+    .kpi--red{background:linear-gradient(180deg,var(--err-100),#fff);border-color:var(--err-300)}
+    .kpi .title{color:var(--muted);font-size:13px;margin-bottom:8px}
+    .kpi .value{font-size:30px;font-weight:800}
+
+    /* Responsivo */
+    @media (max-width:860px){.g3{grid-template-columns:1fr}.g2{grid-template-columns:1fr}.kpis{grid-template-columns:1fr}}
     @media print{.brandbar,nav,.actions,.muted,.hide-on-print{display:none!important};.wrap{gap:6px;padding:0 10px}}
   </style>
 </head>
@@ -58,7 +73,6 @@
   <div class="brandbar">
     <div class="row">
       <div class="logo">
-        <!-- Substitua pelo base64 da sua logo, se quiser -->
         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="SuperFrio logo"/>
         <div>
           <h1>SuperFrio – Controle de Carga</h1>
@@ -221,23 +235,28 @@
         </div>
       </div>
 
-      <div class="grid g3" style="margin-top:10px">
-        <div class="card" style="border:1px solid var(--border)">
-          <div class="muted">Paletes enviados</div>
-          <div style="font-size:28px;font-weight:700" id="kpi-enviados">0</div>
+      <div class="kpis" style="margin-top:10px">
+        <div class="kpi kpi--blue">
+          <div class="title">Paletes enviados</div>
+          <div class="value" id="kpi-enviados">0</div>
         </div>
-        <div class="card" style="border:1px solid var(--border)">
-          <div class="muted">Paletes recebidos</div>
-          <div style="font-size:28px;font-weight:700" id="kpi-recebidos">0</div>
+        <div class="kpi kpi--green">
+          <div class="title">Paletes recebidos</div>
+          <div class="value" id="kpi-recebidos">0</div>
         </div>
-        <div class="card" style="border:1px solid var(--border)">
-          <div class="muted">Quebra</div>
-          <div style="font-size:28px;font-weight:700;color:var(--danger)" id="kpi-quebra">0</div>
+        <div class="kpi kpi--red">
+          <div class="title">Quebra</div>
+          <div class="value" id="kpi-quebra">0</div>
         </div>
       </div>
 
       <div class="card" style="margin-top:10px">
         <canvas id="dash-chart" height="120"></canvas>
+      </div>
+
+      <div class="card" style="margin-top:10px">
+        <h4 style="margin:0 0 8px 0">Status dos documentos</h4>
+        <canvas id="status-chart" height="110"></canvas>
       </div>
     </section>
   </div>
@@ -258,12 +277,12 @@
     }
     Object.values(tabs).forEach(t=> t.btn.addEventListener('click', async ()=>{
       const isDash = (t===tabs.dash);
-      activate(t);                  // mostra a página primeiro
+      activate(t);
       if(t===tabs.novo) resetNovoForm();
-      if(isDash) await loadDashboard(); // só carrega o chart depois da aba ficar visível
+      if(isDash) await loadDashboard();
     }));
 
-    // Geração do ID do documento (ANO + MES + DIA + 2 letras)
+    // ID do documento
     function genDocId(date = new Date()){
       const y = date.getFullYear(), m = date.getMonth()+1, d = date.getDate();
       const L='ABCDEFGHIJKLMNOPQRSTUVWXYZ';
@@ -272,42 +291,34 @@
       return `${y}${m}${d}${a}${b}`;
     }
 
-    // Documento novo (estado em memória)
+    // Estado NOVO
     function newDocData(){
       return {id:genDocId(), status:'Em trânsito', data:new Date().toISOString().slice(0,10),
         origem:'RJ', destino:'', placa:'', motorista:'', confOrigem:'', confDestino:'', obs:'', itens:[]};
     }
     let novo = newDocData();
-
     function resetNovoForm(){ novo=newDocData(); renderNovo(); ensureDefaultsNovo(); }
 
-    // --------- STORAGE: SUPABASE ---------
+    // --------- Supabase I/O ---------
     async function saveDoc(doc){
       const row = {
-        id: doc.id,
-        data: doc.data || null,
-        placa: doc.placa || null,
-        motorista: doc.motorista || null,
-        status: doc.status || null,
-        payload: doc
+        id: doc.id, data: doc.data || null, placa: doc.placa || null,
+        motorista: doc.motorista || null, status: doc.status || null, payload: doc
       };
       const { error } = await supa.from('docs').upsert(row);
       if(error){ console.error(error); alert('Erro ao salvar: '+error.message); }
       else { alert('Salvo! Nº '+doc.id); }
     }
-
     async function getDoc(id){
       const { data, error } = await supa.from('docs').select('payload').eq('id', id).maybeSingle();
       if(error){ console.error(error); alert('Erro ao buscar: '+error.message); return null; }
       return data ? data.payload : null;
     }
-
     async function delDoc(id){
       const { error } = await supa.from('docs').delete().eq('id', id);
       if(error){ console.error(error); alert('Erro ao excluir: '+error.message); }
       else { alert('Excluído.'); }
     }
-
     async function allDocs(filters = {}){
       let q = supa.from('docs').select('id,data,placa,motorista,status').order('data',{ascending:false});
       if(filters.id)        q = q.ilike('id', `%${filters.id}%`);
@@ -317,9 +328,9 @@
       if(error){ console.error(error); alert('Erro ao listar: '+error.message); return []; }
       return data;
     }
-    // -------------------------------------
+    // --------------------------------
 
-    // NOVO: render e handlers
+    // NOVO
     function renderNovo(){
       $('novo-doc').textContent=novo.id; $('novo-status').textContent=novo.status;
       $('novo-numdoc').value=novo.id; $('novo-data').value=novo.data||'';
@@ -349,7 +360,6 @@
       });
       updateNovoTotals();
     }
-
     function hookNovoRow(id){
       const desc=$('n-desc-'+id), qtd=$('n-qtd-'+id), obs=$('n-obs-'+id),
             rec=$('n-rec-'+id), obsd=$('n-obsd-'+id),
@@ -522,7 +532,7 @@
     }
 
     // DASHBOARD
-    let dashChart = null;
+    let dashChart = null, statusChart = null;
 
     function sumFromDocs(docs){
       let enviados = 0, recebidos = 0, quebra = 0;
@@ -548,16 +558,28 @@
       return {enviados, recebidos, quebra, porDia};
     }
 
+    function statusCounts(rows){
+      // rows: [{status: '...'}]
+      const map = {'Em trânsito':0, 'Carregando':0, 'Recebido':0};
+      for(const r of rows){
+        const s = r.status || 'Em trânsito';
+        if(map[s]===undefined) map[s]=0;
+        map[s]++;
+      }
+      return map;
+    }
+
     async function loadDashboard(){
       const de  = $('dash-de').value;
       const ate = $('dash-ate').value;
 
-      let q = supa.from('docs').select('data,payload').order('data', {ascending:true});
+      let q = supa.from('docs').select('data,payload,status').order('data', {ascending:true});
       if(de)  q = q.gte('data', de);
       if(ate) q = q.lte('data', ate);
       const { data, error } = await q;
       if(error){ console.error(error); alert('Erro ao carregar dashboard: '+error.message); return; }
 
+      // KPIs/linha
       const agg = sumFromDocs(data);
       $('kpi-enviados').textContent = agg.enviados;
       $('kpi-recebidos').textContent = agg.recebidos;
@@ -569,7 +591,7 @@
       const serieQbr = dias.map(d=>agg.porDia[d].qbr);
 
       const ctx = document.getElementById('dash-chart').getContext('2d');
-      if(dashChart) { dashChart.destroy(); }
+      if(dashChart) dashChart.destroy();
       dashChart = new Chart(ctx, {
         type: 'line',
         data: {
@@ -587,8 +609,26 @@
           scales: { y: { beginAtZero: true } }
         }
       });
+
+      // Pizza de status
+      const counts = statusCounts(data);
+      const sctx = document.getElementById('status-chart').getContext('2d');
+      if(statusChart) statusChart.destroy();
+      statusChart = new Chart(sctx, {
+        type: 'doughnut',
+        data: {
+          labels: ['Em trânsito','Carregando','Recebido'],
+          datasets: [{
+            data: [counts['Em trânsito']||0, counts['Carregando']||0, counts['Recebido']||0]
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { position: 'bottom' } }
+        }
+      });
     }
-    document.getElementById('dash-atualizar')?.addEventListener('click', loadDashboard);
+    $('dash-atualizar')?.addEventListener('click', loadDashboard);
 
     // Inicialização
     function ensureDefaultsNovo(){ if(novo.itens.length===0){ const id=genDocId(); novo.itens.push({id,desc:'',qtd:'',obs:'',recebida:''}); renderNovo(); } }
