--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       --primary:#148CD6;--primary-dark:#0A6FB9;--danger:#dc2626;--ring: rgba(20,140,214,.35);
       --ok:#16a34a;--ok-100:#dcfce7;--ok-300:#86efac;
       --info:#0ea5e9;--info-100:#e0f2fe;--info-300:#7dd3fc;
-      --warn:#f97316;--warn-100:#ffedd5;--warn-300:#fdba74;
+      --warn:#f59e0b;--warn-100:#fef3c7;--warn-300:#fcd34d;
       --err:#ef4444;--err-100:#fee2e2;--err-300:#fca5a5;
     }
     *{box-sizing:border-box}
@@ -57,10 +57,10 @@
 
     /* KPI CARDS */
     .kpis{display:grid;gap:12px;grid-template-columns:repeat(3,1fr)}
-    .kpi{border-radius:12px;padding:16px;border:1px solid var(--border);background:#fff}
-    .kpi--blue{background:linear-gradient(180deg,var(--info-100),#fff);border-color:var(--info-300)}
-    .kpi--green{background:linear-gradient(180deg,var(--ok-100),#fff);border-color:var(--ok-300)}
-    .kpi--red{background:linear-gradient(180deg,var(--err-100),#fff);border-color:var(--err-300)}
+    .kpi{border-radius:12px;padding:16px;border:1px solid var(--border);background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.04)}
+    .kpi--blue{background:linear-gradient(180deg,var(--info-100),#fff) !important;border-color:var(--info-300) !important}
+    .kpi--green{background:linear-gradient(180deg,var(--ok-100),#fff) !important;border-color:var(--ok-300) !important}
+    .kpi--red{background:linear-gradient(180deg,var(--err-100),#fff) !important;border-color:var(--err-300) !important}
     .kpi .title{color:var(--muted);font-size:13px;margin-bottom:8px}
     .kpi .value{font-size:30px;font-weight:800}
 
@@ -439,8 +439,7 @@
       $('editar-doc').textContent=editing.id; $('editar-status').textContent=editing.status;
       $('ed-numdoc').value=editing.id; $('ed-data').value=editing.data||'';
       $('ed-status').value=editing.status||'Em trânsito';
-      $('ed-origem').value=editing.origem||''; $('ed-destino').value=editing.destino||'';
-      $('ed-placa').value=editing.placa||''; $('ed-motorista').value=editing.motorista||'';
+      $('ed-origem').value=editing.origem||''; $('ed-destino').value=editing.destino||''; $('ed-placa').value=editing.placa||''; $('ed-motorista').value=editing.motorista||'';
       $('ed-conf-origem').value=editing.confOrigem||''; $('ed-conf-destino').value=editing.confDestino||''; $('ed-obs').value=editing.obs||'';
 
       const tbC=document.querySelector('#ed-carreg tbody'), tbD=document.querySelector('#ed-desc tbody'); tbC.innerHTML=''; tbD.innerHTML='';
@@ -537,7 +536,6 @@
     function sumFromDocs(docs){
       let enviados = 0, recebidos = 0, quebra = 0;
       const porDia = {}; // { 'yyyy-mm-dd': {env, rec, qbr} }
-
       for(const d of docs){
         const dataDia = d.data || 'SemData';
         if(!porDia[dataDia]) porDia[dataDia] = {env:0, rec:0, qbr:0};
@@ -549,7 +547,6 @@
           recebidos += r;
           const qbr = Math.max(0, q - r);
           quebra += qbr;
-
           porDia[dataDia].env += q;
           porDia[dataDia].rec += r;
           porDia[dataDia].qbr += qbr;
@@ -557,9 +554,7 @@
       }
       return {enviados, recebidos, quebra, porDia};
     }
-
     function statusCounts(rows){
-      // rows: [{status: '...'}]
       const map = {'Em trânsito':0, 'Carregando':0, 'Recebido':0};
       for(const r of rows){
         const s = r.status || 'Em trânsito';
@@ -579,7 +574,7 @@
       const { data, error } = await q;
       if(error){ console.error(error); alert('Erro ao carregar dashboard: '+error.message); return; }
 
-      // KPIs/linha
+      // KPIs & linha
       const agg = sumFromDocs(data);
       $('kpi-enviados').textContent = agg.enviados;
       $('kpi-recebidos').textContent = agg.recebidos;
@@ -610,7 +605,7 @@
         }
       });
 
-      // Pizza de status
+      // Pizza de status (cores fixas)
       const counts = statusCounts(data);
       const sctx = document.getElementById('status-chart').getContext('2d');
       if(statusChart) statusChart.destroy();
@@ -619,11 +614,19 @@
         data: {
           labels: ['Em trânsito','Carregando','Recebido'],
           datasets: [{
-            data: [counts['Em trânsito']||0, counts['Carregando']||0, counts['Recebido']||0]
+            data: [
+              counts['Em trânsito']||0,
+              counts['Carregando']||0,
+              counts['Recebido']||0
+            ],
+            backgroundColor: ['#60a5fa','#fbbf24','#34d399'],
+            borderColor: ['#3b82f6','#f59e0b','#10b981'],
+            borderWidth: 1
           }]
         },
         options: {
           responsive: true,
+          cutout: '60%',
           plugins: { legend: { position: 'bottom' } }
         }
       });
