--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     window.supa = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
   </script>
 
-  <!-- Chart.js + plugin de data labels -->
+  <!-- Chart.js (para o gráfico de linha do dashboard) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -57,6 +56,7 @@
     th{background:#eff6ff;color:#0b3b66}
     tr:last-child td{border-bottom:none}
 
+    .table-wrap{overflow:auto}
     .muted{color:var(--muted);font-size:12px}
     .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .hide{display:none !important}
@@ -70,11 +70,6 @@
     .kpi .title{color:var(--muted);font-size:13px;margin-bottom:8px}
     .kpi .value{font-size:30px;font-weight:800}
 
-    /* Tamanhos/estilos dos gráficos */
-    .chart-card{display:flex;justify-content:center;align-items:center}
-    .chart-sm{max-width:340px;max-height:340px;margin:0 auto;display:block;}
-
-    /* Responsivo */
     @media (max-width:860px){
       .g3{grid-template-columns:1fr}
       .g2{grid-template-columns:1fr}
@@ -87,7 +82,6 @@
   <div class="brandbar">
     <div class="row">
       <div class="logo">
-        <!-- Use sua imagem/base64 real aqui -->
         <img src="https://dummyimage.com/140x38/148cd6/ffffff&text=SuperFrio" alt="SuperFrio logo"/>
         <div>
           <h1>SuperFrio – Controle de Carga</h1>
@@ -269,12 +263,25 @@
         <canvas id="dash-chart" height="120"></canvas>
       </div>
 
-      <div class="card chart-card" style="margin-top:10px">
-        <div style="width:100%;display:flex;justify-content:center">
-          <div style="width:100%;max-width:380px">
-            <h4 style="margin:0 0 8px 0;text-align:center">Status dos documentos</h4>
-            <canvas id="status-chart" class="chart-sm"></canvas>
-          </div>
+      <!-- TABELA DETALHES -->
+      <div class="card" style="margin-top:10px">
+        <h4 style="margin:0 0 8px 0">Detalhes por documento</h4>
+        <div class="table-wrap">
+          <table id="dash-table">
+            <thead>
+              <tr>
+                <th>Data</th>
+                <th>Placa</th>
+                <th>Motorista</th>
+                <th>Paletes enviados</th>
+                <th>Paletes recebidos</th>
+                <th>Conferente 1</th>
+                <th>Conferente 2</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
       </div>
     </section>
@@ -549,8 +556,8 @@
       }));
     }
 
-    // DASHBOARD
-    let dashChart = null, statusChart = null;
+    // ------- DASHBOARD -------
+    let dashChart = null;
 
     function sumFromDocs(docs){
       let enviados = 0, recebidos = 0, quebra = 0;
@@ -573,21 +580,20 @@
       }
       return {enviados, recebidos, quebra, porDia};
     }
-    function statusCounts(rows){
-      const map = {'Em trânsito':0, 'Carregando':0, 'Recebido':0};
-      for(const r of rows){
-        const s = r.status || 'Em trânsito';
-        if(map[s]===undefined) map[s]=0;
-        map[s]++;
-      }
-      return map;
+    function totalLinha(payload){
+      let env=0, rec=0;
+      (payload?.itens||[]).forEach(it=>{
+        env += Number(it.qtd||0);
+        rec += Number(it.recebida||0);
+      });
+      return {env, rec};
     }
 
     async function loadDashboard(){
       const de  = $('dash-de').value;
       const ate = $('dash-ate').value;
 
-      let q = supa.from('docs').select('data,payload,status').order('data', {ascending:true});
+      let q = supa.from('docs').select('data,placa,motorista,status,payload').order('data', {ascending:true});
       if(de)  q = q.gte('data', de);
       if(ate) q = q.lte('data', ate);
       const { data, error } = await q;
@@ -624,45 +630,28 @@
         }
       });
 
-      // Pizza de status (menor + rótulos)
-      const counts = statusCounts(data);
-      const sctx = document.getElementById('status-chart').getContext('2d');
-      if(statusChart) statusChart.destroy();
-      statusChart = new Chart(sctx, {
-        type: 'doughnut',
-        data: {
-          labels: ['Em trânsito','Carregando','Recebido'],
-          datasets: [{
-            data: [
-              counts['Em trânsito']||0,
-              counts['Carregando']||0,
-              counts['Recebido']||0
-            ],
-            backgroundColor: ['#60a5fa','#fbbf24','#34d399'],
-            borderColor: ['#3b82f6','#f59e0b','#10b981'],
-            borderWidth: 1
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: true,
-          cutout: '35%',
-          plugins: {
-            legend: { position: 'bottom' },
-            datalabels: {
-              color: '#111827',
-              font: { weight:'700' },
-              formatter: (value, ctx) => {
-                const data = ctx.chart.data.datasets[0].data;
-                const total = data.reduce((a,b)=>a+b,0) || 1;
-                const pct = (value*100/total).toFixed(0) + '%';
-                return value ? pct : '';
-              }
-            }
-          }
-        },
-        plugins: [ChartDataLabels]
-      });
+      // Tabela de detalhes
+      const tb = document.querySelector('#dash-table tbody');
+      tb.innerHTML = '';
+      for(const d of data){
+        const { env, rec } = totalLinha(d.payload||{});
+        const placa = d.placa ?? d.payload?.placa ?? '';
+        const mot   = d.motorista ?? d.payload?.motorista ?? '';
+        const c1    = d.payload?.confOrigem ?? '';
+        const c2    = d.payload?.confDestino ?? '';
+        const st    = d.status ?? d.payload?.status ?? '';
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${d.data||''}</td>
+          <td>${placa}</td>
+          <td>${mot}</td>
+          <td>${env}</td>
+          <td>${rec}</td>
+          <td>${c1}</td>
+          <td>${c2}</td>
+          <td>${st}</td>`;
+        tb.appendChild(tr);
+      }
     }
     $('dash-atualizar')?.addEventListener('click', loadDashboard);
 
@@ -672,4 +661,3 @@
   </script>
 </body>
 </html>
-
