--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     window.supa = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
   </script>
 
-  <!-- Chart.js p/ linha do dashboard -->
+  <!-- Chart.js (para o gráfico de linha do dashboard) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
 
   <meta charset="utf-8"/>
@@ -19,8 +19,10 @@
     :root{
       --bg:#f3f7fb;--card:#ffffff;--text:#0f172a;--muted:#64748b;--border:#e2e8f0;
       --primary:#148CD6;--primary-dark:#0A6FB9;--danger:#dc2626;--ring: rgba(20,140,214,.35);
-      --ok:#16a34a;--ok-100:#dcfce7;--ok-300:#86efac;--info:#0ea5e9;--info-100:#e0f2fe;--info-300:#7dd3fc;
-      --warn:#f59e0b;--warn-100:#fef3c7;--warn-300:#fcd34d;--err:#ef4444;--err-100:#fee2e2;--err-300:#fca5a5;
+      --ok:#16a34a;--ok-100:#dcfce7;--ok-300:#86efac;
+      --info:#0ea5e9;--info-100:#e0f2fe;--info-300:#7dd3fc;
+      --warn:#f59e0b;--warn-100:#fef3c7;--warn-300:#fcd34d;
+      --err:#ef4444;--err-100:#fee2e2;--err-300:#fca5a5;
     }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Arial,sans-serif}
@@ -48,22 +50,23 @@
     .btn.ghost{background:#fff;color:var(--primary-dark);border:1px solid var(--primary-dark)}
     .btn.danger{background:var(--danger)}
     .pill{border:1px solid var(--border);border-radius:999px;padding:6px 10px;font-size:12px;color:#0f172a;background:#f8fafc}
-    .muted{color:var(--muted);font-size:12px}
-    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
-    .hide{display:none !important}
 
     table{width:100%;border-collapse:separate;border-spacing:0;border:1px solid var(--border);border-radius:12px;overflow:hidden}
     th,td{padding:10px;border-bottom:1px solid var(--border);background:#fff;text-align:left;font-size:14px}
     th{background:#eff6ff;color:#0b3b66}
     tr:last-child td{border-bottom:none}
-    .table-wrap{overflow:auto}
 
-    /* KPI cards */
+    .table-wrap{overflow:auto}
+    .muted{color:var(--muted);font-size:12px}
+    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .hide{display:none !important}
+
+    /* KPI CARDS coloridos */
     .kpis{display:grid;gap:12px;grid-template-columns:repeat(3,1fr)}
     .kpi{border-radius:12px;padding:16px;border:1px solid var(--border);background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.04)}
-    .kpi--blue{background:linear-gradient(180deg,var(--info-100),#fff) !important;border-color:var(--info-300)!important}
-    .kpi--green{background:linear-gradient(180deg,var(--ok-100),#fff)!important;border-color:var(--ok-300)!important}
-    .kpi--red{background:linear-gradient(180deg,var(--err-100),#fff)!important;border-color:var(--err-300)!important}
+    .kpi--blue{background:linear-gradient(180deg,var(--info-100),#fff) !important;border-color:var(--info-300) !important}
+    .kpi--green{background:linear-gradient(180deg,var(--ok-100),#fff) !important;border-color:var(--ok-300) !important}
+    .kpi--red{background:linear-gradient(180deg,var(--err-100),#fff) !important;border-color:var(--err-300) !important}
     .kpi .title{color:var(--muted);font-size:13px;margin-bottom:8px}
     .kpi .value{font-size:30px;font-weight:800}
 
@@ -138,7 +141,7 @@
       <div class="actions">
         <input id="novo-file" type="file" accept="image/*" capture="environment" multiple class="hide"/>
         <button class="btn" id="novo-add-foto">Adicionar foto</button>
-        <span class="muted">Dica: no celular, abre a câmera.</span>
+        <span class="muted">No celular, abre a câmera.</span>
       </div>
       <div id="novo-fotos" class="photo-grid" style="margin-top:8px"></div>
 
@@ -317,6 +320,7 @@
       while(a===b) b=L[Math.floor(Math.random()*26)];
       return `${y}${m}${d}${a}${b}`;
     }
+    function ts(){ return new Date().toISOString().replace(/[:.]/g,'-'); }
 
     // Estado "novo"
     function newDocData(){
@@ -355,35 +359,67 @@
 
     // ---- Upload/remoção de fotos (Storage) ----
     const BUCKET = 'fotos'; // bucket público
-    function ts(){ return new Date().toISOString().replace(/[:.]/g,'-'); }
 
     function blobFromCanvas(img, max=1280, quality=0.85){
-      const canvas=document.createElement('canvas');
-      const ratio=Math.min(max/img.width, max/img.height, 1);
-      canvas.width=Math.round(img.width*ratio);
-      canvas.height=Math.round(img.height*ratio);
-      const ctx=canvas.getContext('2d');
-      ctx.drawImage(img,0,0,canvas.width,canvas.height);
-      return new Promise(res=> canvas.toBlob(b=>res(b),'image/jpeg',quality));
+      const canvas = document.createElement('canvas');
+      const ratio = Math.min(max / img.width, max / img.height, 1);
+      canvas.width  = Math.round(img.width * ratio);
+      canvas.height = Math.round(img.height * ratio);
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+
+      return new Promise((resolve, reject) => {
+        canvas.toBlob((b) => {
+          if (b) return resolve(b);
+          try { // fallback Safari/iOS
+            const dataUrl = canvas.toDataURL('image/jpeg', quality);
+            const byteString = atob(dataUrl.split(',')[1]);
+            const mimeString = dataUrl.split(',')[0].split(':')[1].split(';')[0];
+            const ab = new ArrayBuffer(byteString.length);
+            const ia = new Uint8Array(ab);
+            for (let i=0; i<byteString.length; i++) ia[i] = byteString.charCodeAt(i);
+            resolve(new Blob([ab], { type: mimeString }));
+          } catch (e) { reject(e); }
+        }, 'image/jpeg', quality);
+      });
     }
     async function compressFile(file){
-      const url=URL.createObjectURL(file);
-      const img=new Image();
-      await new Promise(ok=>{ img.onload=ok; img.src=url; });
-      const blob=await blobFromCanvas(img,1280,0.85);
+      const url = URL.createObjectURL(file);
+      const img = new Image();
+      img.crossOrigin = 'anonymous';
+      await new Promise(ok => { img.onload = ok; img.src = url; });
+      const blob = await blobFromCanvas(img, 1280, 0.85);
       URL.revokeObjectURL(url);
       return blob;
     }
+
     async function uploadPhoto(docId, file){
-      const blob=await compressFile(file);
-      const path=`${docId}/${ts()}.jpg`;
-      const { error } = await supa.storage.from(BUCKET).upload(path, blob, {contentType:'image/jpeg', upsert:false});
-      if(error) throw error;
-      const { data } = supa.storage.from(BUCKET).getPublicUrl(path);
-      return { url:data.publicUrl, path };
+      try {
+        const blob = await compressFile(file);
+        const path = `${docId}/${ts()}.jpg`;
+        const { error } = await supa
+          .storage
+          .from(BUCKET)
+          .upload(path, blob, { contentType: 'image/jpeg', upsert: false });
+
+        if (error) throw error;
+
+        const { data } = supa.storage.from(BUCKET).getPublicUrl(path);
+        return { url: data.publicUrl, path };
+      } catch (err) {
+        console.error('uploadPhoto error:', err);
+        alert('Falha ao enviar foto: ' + (err?.message || err));
+        throw err;
+      }
     }
     async function deletePhoto(path){
-      await supa.storage.from(BUCKET).remove([path]);
+      try{
+        const { error } = await supa.storage.from(BUCKET).remove([path]);
+        if(error) throw error;
+      }catch(err){
+        console.error('deletePhoto error:', err);
+        alert('Falha ao excluir foto: ' + (err?.message || err));
+      }
     }
 
     // NOVO: render / handlers
@@ -437,12 +473,14 @@
     $('novo-file').addEventListener('change', async (e)=>{
       if(!e.target.files?.length) return;
       for(const f of e.target.files){
-        try{
+        try {
           const up = await uploadPhoto(novo.id, f);
           novo.photos.push(up);
-        }catch(err){ console.error(err); alert('Falha ao enviar foto'); }
+        } catch (err) {
+          console.warn('Falha ao enviar uma das fotos:', err);
+        }
       }
-      e.target.value='';
+      e.target.value = '';
       renderNovo();
     });
 
@@ -547,13 +585,15 @@
     $('ed-file').addEventListener('change', async (e)=>{
       if(!editing || !e.target.files?.length) return;
       for(const f of e.target.files){
-        try{
+        try {
           const up = await uploadPhoto(editing.id, f);
           editing.photos = editing.photos || [];
           editing.photos.push(up);
-        }catch(err){ console.error(err); alert('Falha ao enviar foto'); }
+        } catch (err) {
+          console.warn('Falha ao enviar uma das fotos:', err);
+        }
       }
-      e.target.value='';
+      e.target.value = '';
       renderEditar();
     });
 
