--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SuperFrio – Controle de Carga</title>
+  <title>SuperFrio – Controle de Palete</title>
 
   <style>
     :root{
@@ -767,3 +767,4 @@
   </script>
 </body>
 </html>
+
