--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
+  <!-- Plugin de rótulos -->
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -40,13 +42,7 @@
     }
     .brandbar .row{display:flex;align-items:center;gap:14px;flex-wrap:wrap;justify-content:space-between}
     .logo{display:flex;align-items:center;gap:12px}
-    /* Destaque branco atrás da logo */
-    .logo-badge{
-      display:flex;align-items:center;justify-content:center;
-      padding:6px 10px;background:#fff;border-radius:12px;
-      border:1px solid rgba(255,255,255,.65);
-      box-shadow:0 6px 16px rgba(0,0,0,.10);
-    }
+    .logo-badge{display:flex;align-items:center;justify-content:center;padding:6px 10px;background:#fff;border-radius:12px;border:1px solid rgba(255,255,255,.65);box-shadow:0 6px 16px rgba(0,0,0,.10)}
     .logo-badge img{height:38px;width:auto;display:block}
     .logo h1{margin:0;font-size:20px;letter-spacing:.3px;font-weight:700}
     .tagline{margin:0;font-size:12px;opacity:.9;letter-spacing:.2px}
@@ -67,8 +63,7 @@
     label{display:block;font-size:13px;margin-bottom:6px;color:#0f172a}
     input,textarea,select{
       width:100%;padding:10px 12px;border:1px solid var(--border);border-radius:10px;
-      font-size:14px;background:#fff;outline:none;box-shadow:0 0 0 0 rgba(0,0,0,0);
-      -webkit-tap-highlight-color:transparent;
+      font-size:14px;background:#fff;outline:none;box-shadow:0 0 0 0 rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;
     }
     input:focus,textarea:focus,select:focus{border-color:var(--primary);box-shadow:0 0 0 3px var(--ring)}
     textarea{min-height:90px;resize:vertical}
@@ -86,12 +81,8 @@
     table{width:100%;border-collapse:separate;border-spacing:0;border:1px solid var(--border);border-radius:14px;overflow:hidden}
     th,td{padding:10px;border-bottom:1px solid var(--border);background:#fff;text-align:left;font-size:14px}
     tr:last-child td{border-bottom:none}
-    .table-gradient thead tr{
-      background:linear-gradient(90deg,#0A6FB9 0%,#148CD6 50%,#1EC7E6 100%);
-    }
-    .table-gradient thead th{
-      color:#fff;background:transparent;border-bottom:none;
-    }
+    .table-gradient thead tr{background:linear-gradient(90deg,#0A6FB9 0%,#148CD6 50%,#1EC7E6 100%)}
+    .table-gradient thead th{color:#fff;background:transparent;border-bottom:none}
     .table-gradient thead th+th{border-left:none}
     .table-gradient{box-shadow:0 6px 12px rgba(20,140,214,.08)}
 
@@ -123,62 +114,25 @@
     .status-dot{width:10px;height:10px;border-radius:50%}
 
     /* ========= Responsive ========= */
-    /* Tablets (<= 1024px) */
-    @media (max-width:1024px){
-      .wrap{padding:14px}
-      .kpi .value{font-size:26px}
-      th,td{padding:9px}
-      .logo h1{font-size:18px}
-    }
-
-    /* Tablets/Phones médios (<= 860px) */
-    @media (max-width:860px){
-      .g3{grid-template-columns:1fr}
-      .g2{grid-template-columns:1fr}
-      .kpis{grid-template-columns:1fr}
-      .logo-badge img{height:34px}
-      .logo h1{font-size:17px}
-      .tagline{font-size:11px}
-      th,td{font-size:13px}
-    }
-
-    /* Phones (<= 640px) */
+    @media (max-width:1024px){ .wrap{padding:14px} .kpi .value{font-size:26px} th,td{padding:9px} .logo h1{font-size:18px} }
+    @media (max-width:860px){ .g3{grid-template-columns:1fr} .g2{grid-template-columns:1fr} .kpis{grid-template-columns:1fr} .logo-badge img{height:34px} .logo h1{font-size:17px} .tagline{font-size:11px} th,td{font-size:13px} }
     @media (max-width:640px){
-      .brandbar{padding:12px}
-      .brandbar .row{gap:10px}
-      .logo{gap:10px}
-      .logo-badge{padding:5px 8px;border-radius:10px}
-      .logo-badge img{height:30px}
-      .logo h1{font-size:16px}
-      .tagline{font-size:10.5px}
-      .wrap{padding:12px}
-      .card{padding:12px;border-radius:14px}
-      .btn{padding:10px 12px}
-      .actions .btn{flex:1}
-      th,td{padding:8px}
-      table{border-radius:12px}
-      /* evita quebra feia e facilita rolagem horizontal */
-      table th, table td{white-space:nowrap}
+      .brandbar{padding:12px} .brandbar .row{gap:10px} .logo{gap:10px}
+      .logo-badge{padding:5px 8px;border-radius:10px} .logo-badge img{height:30px}
+      .logo h1{font-size:16px} .tagline{font-size:10.5px}
+      .wrap{padding:12px} .card{padding:12px;border-radius:14px}
+      .btn{padding:10px 12px} .actions .btn{flex:1}
+      th,td{padding:8px} table{border-radius:12px} table th, table td{white-space:nowrap}
     }
-
-    /* Phones pequenos (<= 480px) */
     @media (max-width:480px){
       .brandbar .row{flex-direction:column;align-items:flex-start}
-      nav{width:100%}
-      nav button{padding:8px 10px}
-      .pill{font-size:11.5px}
-      .btn{width:100%}
-      label{font-size:12.5px}
-      input,textarea,select{font-size:15px}
-      .kpi{padding:14px}
-      .kpi .value{font-size:24px}
+      nav{width:100%} nav button{padding:8px 10px}
+      .pill{font-size:11.5px} .btn{width:100%}
+      label{font-size:12.5px} input,textarea,select{font-size:15px}
+      .kpi{padding:14px} .kpi .value{font-size:24px}
       th,td{font-size:12.5px}
     }
-
-    @media print{
-      .brandbar,nav,.actions,.muted,.hide-on-print{display:none!important}
-      .wrap{gap:6px;padding:0 10px}
-    }
+    @media print{.brandbar,nav,.actions,.muted,.hide-on-print{display:none!important};.wrap{gap:6px;padding:0 10px}}
   </style>
 </head>
 <body>
@@ -310,7 +264,7 @@
         <h3 style="margin-top:12px"><i class="fa-solid fa-boxes-stacked"></i> Carregamento</h3>
         <table id="ed-carreg" class="table-gradient">
           <thead><tr><th>Descrição</th><th>Qtd (pallets)</th><th>Observações</th><th class="hide-on-print"></th></tr></thead>
-          <tbody></tbody>
+        <tbody></tbody>
         </table>
         <div class="row" style="justify-content:space-between;margin-top:8px">
           <button class="btn ghost" id="ed-add-item"><i class="fa-solid fa-plus"></i> Adicionar item</button>
@@ -327,7 +281,7 @@
           <div class="row" style="justify-content:flex-end"><div class="pill">Total recebido: <b id="ed-total-receb">0</b> • Diferença total: <b id="ed-total-diff">0</b></div></div>
         </div>
 
-        <!-- Histórico (mini painel) -->
+        <!-- Histórico -->
         <h3 style="margin-top:12px"><i class="fa-solid fa-clock-rotate-left"></i> Histórico do documento</h3>
         <div class="table-wrap">
           <table id="hist-table" class="table-gradient">
@@ -382,7 +336,9 @@
         <div class="kpi kpi--red"><div class="title">Quebra</div><div class="value" id="kpi-quebra">0</div></div>
       </div>
 
-      <div class="card" style="margin-top:10px"><canvas id="dash-chart" height="120"></canvas></div>
+      <div class="card" style="margin-top:10px">
+        <canvas id="dash-chart" height="280"></canvas>
+      </div>
 
       <div class="card" style="margin-top:10px">
         <h4 style="margin:0 0 8px 0"><i class="fa-solid fa-clipboard-list"></i> Detalhes por documento</h4>
@@ -820,34 +776,6 @@
       }catch(e){ console.warn('status dots:', e); }
     }
 
-    /* PESQUISAR */
-    $('q-buscar').addEventListener('click', async ()=>{
-      const rows = await allDocs({
-        id: $('q-doc').value.trim().toUpperCase(),
-        placa: $('q-placa').value.trim().toUpperCase(),
-        motorista: $('q-motorista').value.trim().toUpperCase()
-      });
-      renderSearch(rows);
-    });
-    $('q-limpar').addEventListener('click', ()=>{ $('q-doc').value=''; $('q-placa').value=''; $('q-motorista').value=''; renderSearch([]); });
-    function renderSearch(rows){
-      const tb=document.querySelector('#q-table tbody'); tb.innerHTML='';
-      rows.forEach(d=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML=`<td>${d.id}</td><td>${d.data||''}</td><td>${d.placa||''}</td><td>${d.motorista||''}</td><td>${d.status||''}</td>
-                      <td><button class='btn ghost' data-open='${d.id}'><i class="fa-solid fa-pen-to-square"></i> Editar</button></td>`;
-        tb.appendChild(tr);
-      });
-      tb.querySelectorAll('button[data-open]').forEach(b=> b.addEventListener('click', async (e)=>{
-        const id=e.currentTarget.getAttribute('data-open'); tabs.editar.btn.click(); $('editar-id').value=id;
-        const doc=await getDoc(id); if(!doc){alert('Documento não encontrado.'); return;}
-        editing=doc; editingSnapshot=JSON.parse(JSON.stringify(doc));
-        $('editar-form').classList.remove('hide'); renderEditar();
-        loadHistory(id);
-      }));
-      renderStatusDots(document.getElementById('q-table'));
-    }
-
     /* DASHBOARD */
     let dashChart=null;
     function sumFromDocs(docs){
@@ -876,23 +804,98 @@
 
       const dias=Object.keys(agg.porDia).sort();
       const serieEnv=dias.map(d=>agg.porDia[d].env), serieRec=dias.map(d=>agg.porDia[d].rec), serieQbr=dias.map(d=>agg.porDia[d].qbr);
+
+      // padding maior para evitar colisão no topo
+      const maxY = Math.max(0, ...serieEnv, ...serieRec, ...serieQbr);
+      const pad = Math.max(60, Math.ceil(maxY * 0.35));
+      const suggestedMax = maxY + pad;
+
+      if (Chart.registry.plugins.get('datalabels') == null) {
+        Chart.register(ChartDataLabels);
+      }
+
       const ctx=document.getElementById('dash-chart').getContext('2d'); if(dashChart) dashChart.destroy();
+
+      // Funções de offset dinâmico por ponto (evita colisão quando valores aproximam)
+      const gapOffsetEnv = (ctx)=>{
+        const i = ctx.dataIndex;
+        const env = serieEnv[i] ?? 0;
+        const rec = serieRec[i] ?? 0;
+        const gap = Math.abs(env - rec);
+        // quanto menor o gap, maior o distanciamento entre as etiquetas
+        if (gap < 15) return 40;     // bem próximos
+        if (gap < 30) return 26;     // próximos
+        return 14;                   // distância normal
+      };
+      const gapOffsetRec = (ctx)=>{
+        const i = ctx.dataIndex;
+        const env = serieEnv[i] ?? 0;
+        const rec = serieRec[i] ?? 0;
+        const gap = Math.abs(env - rec);
+        if (gap < 15) return 58;     // sobe mais ainda
+        if (gap < 30) return 42;
+        return 30;
+      };
 
       dashChart=new Chart(ctx,{
         type:'line',
         data:{
           labels:dias,
           datasets:[
-            { label:'Enviados', data:serieEnv, borderColor:'#148CD6', backgroundColor:'rgba(20,140,214,0.10)', tension:0.4, cubicInterpolationMode:'monotone' },
-            { label:'Recebidos', data:serieRec, borderColor:'#16a34a', backgroundColor:'rgba(22,163,74,0.10)',  tension:0.4, cubicInterpolationMode:'monotone' },
-            { label:'Quebra',    data:serieQbr, borderColor:'#dc2626', backgroundColor:'rgba(220,38,38,0.10)',  tension:0.4, cubicInterpolationMode:'monotone' }
+            {
+              label:'Enviados',
+              data:serieEnv,
+              borderColor:'#148CD6',
+              backgroundColor:'rgba(20,140,214,0.10)',
+              tension:0.35, pointRadius:3, pointHoverRadius:4, borderWidth:2,
+              datalabels:{
+                formatter:(v)=> (v==null || v===0) ? '' : v,
+                anchor:'end', align:'top', offset:gapOffsetEnv,
+                backgroundColor:'rgba(255,255,255,0.95)',
+                borderColor:'#148CD6', borderWidth:1, borderRadius:4, padding:3, clip:false, color:'#111', font:{weight:'700', size:11}
+              }
+            },
+            {
+              label:'Recebidos',
+              data:serieRec,
+              borderColor:'#16a34a',
+              backgroundColor:'rgba(22,163,74,0.10)',
+              tension:0.35, pointRadius:3, pointHoverRadius:4, borderWidth:2,
+              datalabels:{
+                formatter:(v)=> (v==null || v===0) ? '' : v,
+                anchor:'end', align:'top', offset:gapOffsetRec,
+                backgroundColor:'rgba(255,255,255,0.95)',
+                borderColor:'#16a34a', borderWidth:1, borderRadius:4, padding:3, clip:false, color:'#111', font:{weight:'700', size:11}
+              }
+            },
+            {
+              label:'Quebra',
+              data:serieQbr,
+              borderColor:'#dc2626',
+              backgroundColor:'rgba(220,38,38,0.10)',
+              tension:0.35, pointRadius:3, pointHoverRadius:4, borderWidth:2,
+              datalabels:{
+                formatter:(v)=> (v==null || v===0) ? '' : v,
+                anchor:'end', align:'bottom', offset:10,
+                backgroundColor:'rgba(255,255,255,0.95)',
+                borderColor:'#dc2626', borderWidth:1, borderRadius:4, padding:3, clip:false, color:'#111', font:{weight:'700', size:11}
+              }
+            }
           ]
         },
         options:{
-          responsive:true, maintainAspectRatio:false,
-          plugins:{ legend:{position:'top'} },
+          responsive:true,
+          maintainAspectRatio:false,
+          layout:{ padding:{top:14,right:16,left:8,bottom:10}},
+          plugins:{
+            legend:{position:'top'},
+            tooltip:{ enabled:true }
+          },
           interaction:{mode:'index',intersect:false},
-          scales:{ y:{ beginAtZero:true } }
+          scales:{
+            y:{ beginAtZero:true, suggestedMax, ticks:{ precision:0 } },
+            x:{ ticks:{ autoSkip:true, maxRotation:0 } }
+          }
         }
       });
 
